--- a/lab06/styles.css
+++ b/lab06/styles.css
@@ -1,1 +1,4 @@
-selector {font-family: 'Times New Roman', Times, serif;}
+h1, h2, body {font-family: 'Times New Roman', Times, serif}
+h1 {color: navy;}
+h2 {color: orange}
+.evenrow {background-color: orange;}
