--- a/lab11/styles2.css
+++ b/lab11/styles2.css
@@ -1,6 +1,6 @@
-body {background-color: #1B1A17;}
-h1, h2 {color: #F0A500;}
-body {color: #E45826}
-nav {background-color: #E6D5B8;
+body {background-color: #202A44;}
+h1, h2 {color: #FF0000;}
+body {color: #FFFFFF}
+nav {background-color: #8B0000;
     margin: 20px;
     }
